[package]
name = "schedulerutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cgroups-rs = "0.3.4"
clap = { version = "4.5.0", features = ["derive"] }
nix = { version = "0.27.1", features = ["signal"] }
palaver = "0.2.8"
procfs = "0.16.0"
wait-timeout = "0.2.0"
